Make ConvNet class subclass from torch.nn.Module

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMwZpNrGWtq1sD56VkRSD4H",
+      "authorship_tag": "ABX9TyNbVKKRYDlFMc7LCTcwh1XI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,8 +40,11 @@
         "id": "g2zvNd8X31UI"
       },
       "source": [
-        "class ConvNet():\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "class ConvNet(nn.Module):\n",
         "  def __init__(self):\n",
+        "    super.__init__()\n",
         "    "
       ],
       "execution_count": null,
