Add convolutional layers to ConvNet class

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNbVKKRYDlFMc7LCTcwh1XI",
+      "authorship_tag": "ABX9TyN/Dvd9H1AvRHlSzFu/xlN1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,8 +43,28 @@
         "import torch.nn as nn\n",
         "\n",
         "class ConvNet(nn.Module):\n",
+        "  # Assume input image is 32x32x3\n",
+        "  self.PADDING_SIZE = 1\n",
+        "  self.KERNEL_SIZE = 3\n",
+        "  self.STRIDE = 1\n",
         "  def __init__(self):\n",
         "    super.__init__()\n",
+        "    self.conv1 = nn.Conv2d(3, 32, \n",
+        "                           kernel_size=self.KERNEL_SIZE, \n",
+        "                           stride=self.STRIDE, \n",
+        "                           padding=self.PADDING_SIZE)\n",
+        "    self.conv2 = nn.Conv2d(32, 64, \n",
+        "                           kernel_size=self.KERNEL_SIZE, \n",
+        "                           stride=self.STRIDE, \n",
+        "                           padding=self.PADDING_SIZE)\n",
+        "    self.conv3 = nn.Conv2d(64, 128, \n",
+        "                           kernel_size=self.KERNEL_SIZE, \n",
+        "                           stride=self.STRIDE, \n",
+        "                           padding=self.PADDING_SIZE)\n",
+        "    self.conv4 = nn.Conv2d(128, 256, \n",
+        "                           kernel_size=self.KERNEL_SIZE, \n",
+        "                           stride=self.STRIDE, \n",
+        "                           padding=self.PADDING_SIZE)\n",
         "    "
       ],
       "execution_count": null,
