--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN/Dvd9H1AvRHlSzFu/xlN1",
+      "authorship_tag": "ABX9TyP+STAKmcE3WWItgn/KNj/9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,12 +41,14 @@
       },
       "source": [
         "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
         "\n",
         "class ConvNet(nn.Module):\n",
         "  # Assume input image is 32x32x3\n",
         "  self.PADDING_SIZE = 1\n",
         "  self.KERNEL_SIZE = 3\n",
         "  self.STRIDE = 1\n",
+        "  self.POOL_SIZE = 2\n",
         "  def __init__(self):\n",
         "    super.__init__()\n",
         "    self.conv1 = nn.Conv2d(3, 32, \n",
@@ -65,6 +67,20 @@
         "                           kernel_size=self.KERNEL_SIZE, \n",
         "                           stride=self.STRIDE, \n",
         "                           padding=self.PADDING_SIZE)\n",
+        "    self.fc1 = nn.Linear(256 * 2 * 2, 512)\n",
+        "    self.fc2 = nn.Linear(512, 43)\n",
+        "    \n",
+        "  def forward(self, x):\n",
+        "    x = F.max_pool2d(F.relu(self.conv1(x)), self.POOL_SIZE)\n",
+        "    x = F.max_pool2d(F.relu(self.conv2(x)), self.POOL_SIZE)\n",
+        "    x = F.max_pool2d(F.relu(self.conv3(x)), self.POOL_SIZE)\n",
+        "    x = F.max_pool2d(F.relu(self.conv4(x)), self.POOL_SIZE)\n",
+        "    x = x.flatten(start_dim=1)\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = self.fc2(x)\n",
+        "    return x\n",
+        "\n",
+        "\n",
         "    "
       ],
       "execution_count": null,
