Add image processing class and main cell to run CNN

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+STAKmcE3WWItgn/KNj/9",
+      "authorship_tag": "ABX9TyM8W38b95pbRMkMRIvKIjhm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,12 +44,12 @@
         "import torch.nn.functional as F\n",
         "\n",
         "class ConvNet(nn.Module):\n",
-        "  # Assume input image is 32x32x3\n",
-        "  self.PADDING_SIZE = 1\n",
-        "  self.KERNEL_SIZE = 3\n",
-        "  self.STRIDE = 1\n",
-        "  self.POOL_SIZE = 2\n",
         "  def __init__(self):\n",
+        "    # Assume input image is 32x32x3\n",
+        "    self.PADDING_SIZE = 1\n",
+        "    self.KERNEL_SIZE = 3\n",
+        "    self.STRIDE = 1\n",
+        "    self.POOL_SIZE = 2\n",
         "    super.__init__()\n",
         "    self.conv1 = nn.Conv2d(3, 32, \n",
         "                           kernel_size=self.KERNEL_SIZE, \n",
@@ -82,6 +82,35 @@
         "\n",
         "\n",
         "    "
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rJB4ZTXnLADn"
+      },
+      "source": [
+        "import numpy as np\n",
+        "import cv2\n",
+        "\n",
+        "class DataProcessing:\n",
+        "  def __init__(self):"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vJkt76LEHJ76"
+      },
+      "source": [
+        "EPOCHS = 25\n",
+        "BATCH_SIZE = 100\n",
+        "\n",
+        "ConvNet = ConvNet()"
       ],
       "execution_count": null,
       "outputs": []
