Add method to create list of training data paths for each class

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM8W38b95pbRMkMRIvKIjhm",
+      "authorship_tag": "ABX9TyNkBw8JjgMLiNAeK+1uam3F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         "\n",
         "    "
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,21 @@
         "import cv2\n",
         "\n",
         "class DataProcessing:\n",
-        "  def __init__(self):"
+        "  def __init__(self):\n",
+        "    self.IMG_SIZE = 50\n",
+        "    self.CLASS_COUNT = 43\n",
+        "    self.TRAIN_PATH = 'traffic_sign_images/Train'\n",
+        "    self.TEST_PATH = 'traffic_sign_images/Test'\n",
+        "    self.testing_data = []\n",
+        "    self.training_data = []\n",
+        "    self.training_paths = {}\n",
+        "    # Holds paths for each training folder\n",
+        "    self.training_folders = []\n",
+        "    self.label_count = {i: 0 for i in range(self.CLASS_COUNT)}\n",
+        "\n",
+        "    def store_training_paths(self):\n",
+        "      self.training_paths = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
+        "    "
       ],
       "execution_count": null,
       "outputs": []
