Add method to create training dataset as .npy file

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNkBw8JjgMLiNAeK+1uam3F",
+      "authorship_tag": "ABX9TyMJIHMIVBkmN1OSUA39M8JM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,6 +94,7 @@
       "source": [
         "import numpy as np\n",
         "import cv2\n",
+        "import os\n",
         "\n",
         "class DataProcessing:\n",
         "  def __init__(self):\n",
@@ -103,16 +104,27 @@
         "    self.TEST_PATH = 'traffic_sign_images/Test'\n",
         "    self.testing_data = []\n",
         "    self.training_data = []\n",
-        "    self.training_paths = {}\n",
         "    # Holds paths for each training folder\n",
         "    self.training_folders = []\n",
         "    self.label_count = {i: 0 for i in range(self.CLASS_COUNT)}\n",
+        "    self.class_labels = {i: 0 for i in range(self.CLASS_COUNT)}\n",
         "\n",
         "    def store_training_paths(self):\n",
-        "      self.training_paths = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
+        "      self.training_folders = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
+        "\n",
+        "    def make_training_dataset(self):\n",
+        "      for path in self.training_folders:\n",
+        "        for image in os.listdir(path):\n",
+        "          image = cv2.imread(os.join(path, image), cv2.IMREAD_COLOR)\n",
+        "          image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
+        "          self.training_data.append(np.array(image), self.class_labels[i])\n",
+        "          count[i] += 1\n",
+        "      np.save('training_data.npy', self.training_data, allow_pickle=True)\n",
+        "\n",
+        "\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
