Add method to save testing data as .npy file

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJIHMIVBkmN1OSUA39M8JM",
+      "authorship_tag": "ABX9TyNRKPvzmRdM0XZ0e50O+u9f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,9 +117,17 @@
         "        for image in os.listdir(path):\n",
         "          image = cv2.imread(os.join(path, image), cv2.IMREAD_COLOR)\n",
         "          image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
-        "          self.training_data.append(np.array(image), self.class_labels[i])\n",
+        "          self.training_data.append(np.array(image), np.eye(43)[self.class_labels[i]])\n",
         "          count[i] += 1\n",
         "      np.save('training_data.npy', self.training_data, allow_pickle=True)\n",
+        "\n",
+        "    def make_testing_dataset(self):\n",
+        "      for image in oslistdir(self.TEST_PATH):\n",
+        "        image = cv2.imread(os.join(self.TEST_PATH, image), cv2.IMREAD_COLOR)\n",
+        "        image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
+        "        self.testing_data.append(np.array(image), np.eye(43)[self.class_labels[i]])\n",
+        "      np.save('testing_data.npy', self.testing_data, allow_pickle=True)\n",
+        "\n",
         "\n",
         "\n",
         "    "
