Update testing dataset creation method to use Test.csv for class labels

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRKPvzmRdM0XZ0e50O+u9f",
+      "authorship_tag": "ABX9TyOOVhSxZoB195GHEu0NSfs6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "    self.KERNEL_SIZE = 3\n",
         "    self.STRIDE = 1\n",
         "    self.POOL_SIZE = 2\n",
-        "    super.__init__()\n",
+        "    super().__init__()\n",
         "    self.conv1 = nn.Conv2d(3, 32, \n",
         "                           kernel_size=self.KERNEL_SIZE, \n",
         "                           stride=self.STRIDE, \n",
@@ -83,7 +83,7 @@
         "\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -115,24 +115,33 @@
         "    def make_training_dataset(self):\n",
         "      for path in self.training_folders:\n",
         "        for image in os.listdir(path):\n",
+        "          image_path = self.class_labels[int(self.training_folders[path][25:])]\n",
         "          image = cv2.imread(os.join(path, image), cv2.IMREAD_COLOR)\n",
         "          image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
-        "          self.training_data.append(np.array(image), np.eye(43)[self.class_labels[i]])\n",
+        "          self.training_data.append([np.array(image), np.eye(43)[image_path]])\n",
         "          count[i] += 1\n",
         "      np.save('training_data.npy', self.training_data, allow_pickle=True)\n",
         "\n",
         "    def make_testing_dataset(self):\n",
+        "      class_labels = {}\n",
+        "      with open('traffic_sign_images/Test.csv') as file:\n",
+        "        for line in file.readline():\n",
+        "          line_array = line.split(',')\n",
+        "          if line_array[0] != 'Width':\n",
+        "            image_index = line_array[7][5:10].lstrip('0')\n",
+        "            class_labels[image_index] = int(line_array[6])\n",
         "      for image in oslistdir(self.TEST_PATH):\n",
+        "        image_path = class_labels[os.listdir(self.TEST_PATH).index(image)]\n",
         "        image = cv2.imread(os.join(self.TEST_PATH, image), cv2.IMREAD_COLOR)\n",
         "        image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
-        "        self.testing_data.append(np.array(image), np.eye(43)[self.class_labels[i]])\n",
+        "        self.testing_data.append([np.array(image), np.eye(43)[image_path]])\n",
         "      np.save('testing_data.npy', self.testing_data, allow_pickle=True)\n",
         "\n",
         "\n",
         "\n",
         "    "
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -146,7 +155,7 @@
         "\n",
         "ConvNet = ConvNet()"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     }
   ]
