--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPMvI2jcGwrL2g5/aj4rh2b",
+      "authorship_tag": "ABX9TyNE4OTFkBQCW8072tSwTrlm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         "\n",
         "    "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,10 +109,8 @@
         "    self.label_count = {i: 0 for i in range(self.CLASS_COUNT)}\n",
         "    self.class_labels = {i: 0 for i in range(self.CLASS_COUNT)}\n",
         "\n",
-        "    def store_training_paths(self):\n",
-        "      self.training_folders = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
-        "\n",
         "    def make_training_dataset(self):\n",
+        "      self.training_folders = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
         "      for path in self.training_folders:\n",
         "        for image in os.listdir(path):\n",
         "          image_path = self.class_labels[int(self.training_folders[path][25:])]\n",
@@ -141,7 +139,7 @@
         "\n",
         "    "
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,9 +148,9 @@
         "id": "vJkt76LEHJ76",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 232
         },
-        "outputId": "b8503b48-7b6b-4161-ea05-90e3c3fa93b7"
+        "outputId": "81dd80d6-c841-44e8-d780-49fdcc886e65"
       },
       "source": [
         "import torch\n",
@@ -165,9 +163,8 @@
         "training_data = []\n",
         "testing_data = []\n",
         "\n",
-        "DataProccesor = DataProcessing\n",
+        "DataProccesor = DataProcessing()\n",
         "# if 'training_data.npy' not in os.listdir():\n",
-        "#   DataProcessing.store_training_paths()\n",
         "#   DataProcessing.make_training_dataset()\n",
         "#   DataProcessing.make_testing_dataset()\n",
         "# training_data = np.load('training_data.npy', allow_pickle=True)\n",
@@ -181,69 +178,20 @@
         "    class_img_count.append(x)\n",
         "    total_images += image_count\n",
         "\n",
-        "FINAL_WEIGHTS = torch.Tensor([1 - img_count/total_images for img_count in class_img_count])\n"
+        "FINAL_WEIGHTS = torch.Tensor([1 - img_count/total_images for img_count in class_img_count])\n",
+        "print(FINAL_WEIGHTS)\n"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "12\n",
-            "9\n",
-            "27\n",
-            "28\n",
-            "39\n",
-            "34\n",
-            "17\n",
-            "36\n",
-            "24\n",
-            "42\n",
-            "35\n",
-            "4\n",
-            "25\n",
-            "26\n",
-            "18\n",
-            "40\n",
-            "30\n",
-            "8\n",
-            "29\n",
-            "11\n",
-            "10\n",
-            "19\n",
-            "31\n",
-            "7\n",
-            "1\n",
-            "38\n",
-            "20\n",
-            "14\n",
-            "13\n",
-            "37\n",
-            "41\n",
-            "3\n",
-            "21\n",
-            "15\n",
-            "16\n",
-            "23\n",
-            "2\n",
-            "33\n",
-            "6\n",
-            "0\n",
-            "32\n",
-            "22\n",
-            "5\n"
-          ],
-          "name": "stdout"
-        },
-        {
           "output_type": "error",
-          "ename": "TypeError",
+          "ename": "FileNotFoundError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-52-b8f89dcaa3a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mFINAL_WEIGHTS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mimg_count\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtotal_images\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mimg_count\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclass_img_count\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0mConvNet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mConvNet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: forward() missing 1 required positional argument: 'x'"
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-8f35ffac3792>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mtotal_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mclass_img_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mfolder\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataProccesor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mfolder\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'.DS_Store'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mimage_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataProccesor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'traffic_sign_images/Train'"
           ]
         }
       ]
