--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNE4OTFkBQCW8072tSwTrlm",
+      "authorship_tag": "ABX9TyN7fBPfrB3nLIcQBq6OnqNz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,7 +83,7 @@
         "\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -104,19 +104,18 @@
         "    self.TEST_PATH = 'traffic_sign_images/Test'\n",
         "    self.testing_data = []\n",
         "    self.training_data = []\n",
-        "    # Holds paths for each training folder\n",
-        "    self.training_folders = []\n",
+        "    self.training_folder_paths = []\n",
         "    self.label_count = {i: 0 for i in range(self.CLASS_COUNT)}\n",
         "    self.class_labels = {i: 0 for i in range(self.CLASS_COUNT)}\n",
         "\n",
         "    def make_training_dataset(self):\n",
-        "      self.training_folders = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
-        "      for path in self.training_folders:\n",
+        "      self.training_folder_paths = [self.TRAIN_PATH + f'/{str(i)}' for i in range(self.CLASS_COUNT)]\n",
+        "      for path in self.training_folder_paths:\n",
         "        for image in os.listdir(path):\n",
-        "          image_path = self.class_labels[int(self.training_folders[path][25:])]\n",
+        "          image_path = self.class_labels[int(self.training_folder_paths[path][25:])]\n",
         "          image = cv2.imread(os.path.join(path, image), cv2.IMREAD_COLOR)\n",
         "          image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
-        "          self.training_data.append([np.array(image), np.eye(43)[image_path]])\n",
+        "          self.training_data.append([np.array(image), np.eye(self.CLASS_COUNT)[image_path]])\n",
         "          count[i] += 1\n",
         "      np.save('training_data.npy', self.training_data, allow_pickle=True)\n",
         "\n",
@@ -128,18 +127,18 @@
         "          if line_array[0] != 'Width':\n",
         "            image_index = line_array[7][5:10].lstrip('0')\n",
         "            class_labels[image_index] = int(line_array[6])\n",
-        "      for image in oslistdir(self.TEST_PATH):\n",
+        "      for image in os.listdir(self.TEST_PATH):\n",
         "        image_path = class_labels[os.listdir(self.TEST_PATH).index(image)]\n",
         "        image = cv2.imread(os.path.join(self.TEST_PATH, image), cv2.IMREAD_COLOR)\n",
         "        image = cv2.resize(image, (self.IMG_SIZE, self.IMG_SIZE))\n",
-        "        self.testing_data.append([np.array(image), np.eye(43)[image_path]])\n",
+        "        self.testing_data.append([np.array(image), np.eye(self.CLASS_COUNT)[image_path]])\n",
         "      np.save('testing_data.npy', self.testing_data, allow_pickle=True)\n",
         "\n",
         "\n",
         "\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -147,13 +146,18 @@
       "metadata": {
         "id": "vJkt76LEHJ76",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 232
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "81dd80d6-c841-44e8-d780-49fdcc886e65"
+        "outputId": "ce31d5cf-dfc0-4fcc-f3db-4ee34ad68c2d"
       },
       "source": [
         "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.optim as optim\n",
+        "from tqdm import tqdm\n",
+        "import matplotlib.pyplot as plt\n",
+        "import os\n",
+        "import numpy as np\n",
         "\n",
         "EPOCHS = 25\n",
         "BATCH_SIZE = 100\n",
@@ -175,24 +179,34 @@
         "for folder in os.listdir(DataProccesor.TRAIN_PATH):\n",
         "  if folder != '.DS_Store':\n",
         "    image_count = len([img for img in os.listdir(os.path.join(DataProccesor.TRAIN_PATH, folder))])\n",
-        "    class_img_count.append(x)\n",
+        "    class_img_count.append(image_count)\n",
         "    total_images += image_count\n",
         "\n",
         "FINAL_WEIGHTS = torch.Tensor([1 - img_count/total_images for img_count in class_img_count])\n",
-        "print(FINAL_WEIGHTS)\n"
+        "CNN = ConvNet()\n",
+        "OPTIMIZER = optim.Adam(CNN.parameters(), lr=0.01)\n",
+        "CRITERION = nn.CrossEntropyLoss(weight=FINAL_WEIGHTS)\n",
+        "\n",
+        "TRAIN_IMAGES = torch.tensor([i[0] for i in tqdm(training_data)]).view(-1, 3, 50, 50)\n",
+        "TRAIN_IMAGES /= 255.0\n",
+        "TRAIN_LABELS = torch.tensor([i[1] for i in tqdm(training_data)], dtype=torch.float32)\n",
+        "\n",
+        "TEST_IMAGES = torch.tensor([i[0] for i in tqdm(testing_data)]).view(-1, 3, 50, 50)\n",
+        "TEST_IMAGES /= 255.0\n",
+        "TEST_LABELS = torch.tensor([i[1] for i in tqdm(testing_data)], dtype=torch.float32)\n",
+        "\n"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-8f35ffac3792>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mtotal_images\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0mclass_img_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mfolder\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataProccesor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mfolder\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'.DS_Store'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mimage_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mimg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataProccesor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTRAIN_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfolder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'traffic_sign_images/Train'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n",
+            "0it [00:00, ?it/s]\n"
+          ],
+          "name": "stderr"
         }
       ]
     }
