Implement model training loop

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN7fBPfrB3nLIcQBq6OnqNz",
+      "authorship_tag": "ABX9TyN0yS78P+o6OM6zSdehWHFm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -194,6 +194,18 @@
         "TEST_IMAGES = torch.tensor([i[0] for i in tqdm(testing_data)]).view(-1, 3, 50, 50)\n",
         "TEST_IMAGES /= 255.0\n",
         "TEST_LABELS = torch.tensor([i[1] for i in tqdm(testing_data)], dtype=torch.float32)\n",
+        "\n",
+        "for epoch in range(EPOCHS):\n",
+        "  for i in range(tqdm(range(0, len(training_data), BATCH_SIZE))):\n",
+        "    BATCH_IMGS = TRAIN_IMAGES[i:i + BATCH_SIZE].view(-1, 3, 50, 50)\n",
+        "    BATCH_LABELS = TRAIN_LABELS[i:i + BATCH_SIZE]\n",
+        "\n",
+        "    OPTIMIZER.zero_grad()\n",
+        "    OUTPUTS = CNN(BATCH_IMGS)\n",
+        "    LOSS = CRITERION(OUTPUTS, torch.tensor([list(label).index(1) for label in BATCH_LABELS]).long())\n",
+        "    LOSS.backward()\n",
+        "    OPTIMIZER.step()\n",
+        "  print(f'Loss: {LOSS}')\n",
         "\n"
       ],
       "execution_count": 10,
