Add accuracy loop

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN0yS78P+o6OM6zSdehWHFm",
+      "authorship_tag": "ABX9TyMjjUaCSzxQS8pjKa/O9fmD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -206,6 +206,30 @@
         "    LOSS.backward()\n",
         "    OPTIMIZER.step()\n",
         "  print(f'Loss: {LOSS}')\n",
+        "\n",
+        "with torch.no_grad():\n",
+        "  class_correct = {}\n",
+        "  total_correct = 0\n",
+        "  total_images = 0\n",
+        "  total_classes = {}\n",
+        "  for i in tqdm(range(len(TEST_IMAGES))):\n",
+        "    CORRECT_CLASS = torch.argmax(TEST_LABELS[i])\n",
+        "    PREDICTED_CLASS = torch.argmax(CNN(TEST_IMAGES[i].view(-1, 3, 50, 50))[0])\n",
+        "    \n",
+        "    total_images += 1\n",
+        "    if PREDICTED_CLASS in total_classes:\n",
+        "      total_classes[PREDICTED_CLASS.item()] += 1\n",
+        "    else:\n",
+        "      total_classes[PREDICTED_CLASS.item()] = 1\n",
+        "    \n",
+        "    if PREDICTED_CLASS == CORRECT_CLASS:\n",
+        "      total_correct += 1\n",
+        "      if CORRECT_CLASS in class_correct:\n",
+        "        class_correct[CORRECT_CLASS.item()] += 1\n",
+        "      else:\n",
+        "        class_correct[CORRECT_CLASS.item()] = 1\n",
+        "print([f'Accuracy for {img_class}: {round(100 * class_correct[img_class] / total_classes[img_class])}' for img_class in class_correct])\n",
+        "print(f'Total correct: {round(100 * total_correct / total_images)}')\n",
         "\n"
       ],
       "execution_count": 10,
