Create custom Dataset class and methods to override

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNPhXh9iNfMz+dWXLAckyzj",
+      "authorship_tag": "ABX9TyNtnmLW7DJ8/6MyqTLWGbj6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -178,8 +178,8 @@
         "\n",
         "FINAL_WEIGHTS = torch.Tensor([1 - img_count/total_images for img_count in class_img_count])\n",
         "CNN = ConvNet()\n",
-        "OPTIMIZER = optim.Adam(CNN.parameters(), lr=0.002)\n",
-        "CRITERION = nn.CrossEntropyLoss(weight=FINAL_WEIGHTS)\n",
+        "optimizer = optim.Adam(CNN.parameters(), lr=0.002)\n",
+        "criterion = nn.CrossEntropyLoss(weight=FINAL_WEIGHTS)\n",
         "\n",
         "TRAIN_IMAGES = torch.tensor([i[0] for i in tqdm(training_data)]).view(image_size)\n",
         "TRAIN_IMAGES = TRAIN_IMAGES / 255.0\n",
@@ -194,12 +194,12 @@
         "    BATCH_IMGS = TRAIN_IMAGES[i:i + BATCH_SIZE].view(image_size)\n",
         "    BATCH_LABELS = TRAIN_LABELS[i:i + BATCH_SIZE]\n",
         "\n",
-        "    OPTIMIZER.zero_grad()\n",
+        "    optimizer.zero_grad()\n",
         "    OUTPUTS = CNN(BATCH_IMGS)\n",
-        "    LOSS = CRITERION(OUTPUTS, torch.tensor([list(label).index(1) for label in BATCH_LABELS]).long())\n",
-        "    LOSS.backward()\n",
-        "    OPTIMIZER.step()\n",
-        "  print(f'Epoch: {epoch}, Loss: {LOSS}')\n",
+        "    loss = criterion(OUTPUTS, torch.tensor([list(label).index(1) for label in BATCH_LABELS]).long())\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "  print(f'Epoch: {epoch}, Loss: {loss}')\n",
         "\n",
         "with torch.no_grad():\n",
         "  total_classes = {}\n",
@@ -229,16 +229,62 @@
         "id": "KQgAG3K6-u43"
       },
       "source": [
-        "'''\n",
+        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "!cp -r /content/gdrive/My\\ Drive/ColabNotebooks/Data/ traffic_sign_images.zip\n",
         "!unzip traffic_sign_images.zip/traffic_sign_images.zip\n",
-        "!rm -r traffic_sign_images.zip/\n",
-        "'''"
+        "!rm -r traffic_sign_images.zip/\n"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uKU0VKEt7laU",
+        "outputId": "21ad71c1-a97b-492b-b464-d5e01761e0e1"
+      },
+      "source": [
+        "'''import pandas as pd\n",
+        "df = pd.read_csv('traffic_sign_images/Train.csv')\n",
+        "print(df)'''\n",
+        "\n",
+        "from torch.utils.data import Dataset\n",
+        "class TrafficSignDataset(Dataset):\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "  def __len__(self):\n",
+        "    pass\n",
+        "  def __getitem__(self, idx):\n",
+        "    pass"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "       Width  Height  Roi.X1  ...  Roi.Y2  ClassId                            Path\n",
+            "0         27      26       5  ...      20       20  Train/20/00020_00000_00000.png\n",
+            "1         28      27       5  ...      22       20  Train/20/00020_00000_00001.png\n",
+            "2         29      26       6  ...      21       20  Train/20/00020_00000_00002.png\n",
+            "3         28      27       5  ...      22       20  Train/20/00020_00000_00003.png\n",
+            "4         28      26       5  ...      21       20  Train/20/00020_00000_00004.png\n",
+            "...      ...     ...     ...  ...     ...      ...                             ...\n",
+            "39204     52      56       5  ...      51       42  Train/42/00042_00007_00025.png\n",
+            "39205     56      58       5  ...      53       42  Train/42/00042_00007_00026.png\n",
+            "39206     58      62       5  ...      57       42  Train/42/00042_00007_00027.png\n",
+            "39207     63      69       5  ...      63       42  Train/42/00042_00007_00028.png\n",
+            "39208     68      69       7  ...      63       42  Train/42/00042_00007_00029.png\n",
+            "\n",
+            "[39209 rows x 8 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
