Implement custom Dataset class methods

--- a/TrafficSignClassification.ipynb
+++ b/TrafficSignClassification.ipynb
@@ -6,7 +6,7 @@
       "name": "TrafficSignClassification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNtnmLW7DJ8/6MyqTLWGbj6",
+      "authorship_tag": "ABX9TyOfD4SJ/xd0s7Bsk0WUZptg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -242,49 +242,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uKU0VKEt7laU",
-        "outputId": "21ad71c1-a97b-492b-b464-d5e01761e0e1"
+        "id": "uKU0VKEt7laU"
       },
       "source": [
-        "'''import pandas as pd\n",
-        "df = pd.read_csv('traffic_sign_images/Train.csv')\n",
-        "print(df)'''\n",
+        "import pandas as pd\n",
+        "import os\n",
+        "import cv2\n",
         "\n",
         "from torch.utils.data import Dataset\n",
         "class TrafficSignDataset(Dataset):\n",
-        "  def __init__(self):\n",
-        "    pass\n",
+        "  def __init__(self, train, root_dir, img_size):\n",
+        "    self.train = train\n",
+        "    self.root_dir = root_dir\n",
+        "    self.df = pd.read_csv(os.path.join(root_dir, 'Train.csv' if train else 'Test.csv'))\n",
+        "    self.img_size = img_size\n",
+        "\n",
         "  def __len__(self):\n",
-        "    pass\n",
+        "    return len(df)\n",
+        "\n",
         "  def __getitem__(self, idx):\n",
-        "    pass"
+        "    image = cv2.imread(os.path.join(self.root_dir, df.iloc[idx][7]), cv2.IMREAD_COLOR)\n",
+        "    image = cv2.resize(image, (self.img_size, self.img_size))\n",
+        "    return {'image': torch.tensor(image), 'label': df.iloc[idx][6]}\n"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "       Width  Height  Roi.X1  ...  Roi.Y2  ClassId                            Path\n",
-            "0         27      26       5  ...      20       20  Train/20/00020_00000_00000.png\n",
-            "1         28      27       5  ...      22       20  Train/20/00020_00000_00001.png\n",
-            "2         29      26       6  ...      21       20  Train/20/00020_00000_00002.png\n",
-            "3         28      27       5  ...      22       20  Train/20/00020_00000_00003.png\n",
-            "4         28      26       5  ...      21       20  Train/20/00020_00000_00004.png\n",
-            "...      ...     ...     ...  ...     ...      ...                             ...\n",
-            "39204     52      56       5  ...      51       42  Train/42/00042_00007_00025.png\n",
-            "39205     56      58       5  ...      53       42  Train/42/00042_00007_00026.png\n",
-            "39206     58      62       5  ...      57       42  Train/42/00042_00007_00027.png\n",
-            "39207     63      69       5  ...      63       42  Train/42/00042_00007_00028.png\n",
-            "39208     68      69       7  ...      63       42  Train/42/00042_00007_00029.png\n",
-            "\n",
-            "[39209 rows x 8 columns]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 35,
+      "outputs": []
     }
   ]
 }
